--- a/index.html
+++ b/index.html
@@ -1,61 +1,127 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-
-		<title>edChain</title>
-
-		<!-- Stylesheets -->
-		<link rel="stylesheet" href="./vendor/bootstrap-3.3.7.css">
-		<link rel="stylesheet" href="./styles.css">
-
-		<!-- Scripts -->
-		<script>delete module.exports</script>
-		<script src="./vendor/jquery-3.1.1.js"></script>
-		<script src="./vendor/mustache.min.js"></script>
-		<script src="./vendor/bootstrap-3.3.7.js"></script>
-		<script src="./vendor/jsoneditor.min.js"></script>
-		<script src="./window.js"></script>
-
-	</head>
-	<body>
-		<div class="col-sm-12">
-			<ul class="nav nav-tabs">
-				<li class="nav active"><a href="#info" data-toggle="tab">Info</a></li>
-				<li class="nav"><a href="#JSON" data-toggle="tab">Add JSON</a></li>
-				<li class="nav"><a href="#C" data-toggle="tab">C</a></li>
-			</ul>
-
-			<!-- Tab panes -->
-			<div class="tab-content">
-				<div class="tab-pane fade in active" id="info">
-					<div class="col-sm-2">
-						<div id="nodeStatus" class="alert">
-						</div>
-					</div>
-					<div class="col-sm-8">
-						<div id="IDs" class="well">
-							<div>
-								<b>Peer ID:</b> <span id="peerID"></span>
-							</div>
-							<div>
-								<b>Publisher ID:</b> <span id="publisherID"></span>
-							</div>
-							<div>
-								<b>Info:</b> <span id="info"></span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="tab-pane fade" id="JSON">
-					<button id="open">
-						Content inside tab B
-					</button>
-				</div>
-				<div class="tab-pane fade" id="C">
-					Content inside tab C
-				</div>
-			</div>
-		</div>
-	</div>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="icon" href="../../../../favicon.ico">
+        <title>edChain</title>
+        <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+        <link href="vendor/css/album.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="collapse bg-dark" id="navbarHeader">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-8 py-4">
+                        <h4 class="text-white">About Us</h4>
+                        <p class="text-muted">edChain standardizes and unites information across platforms.  Students gain access to best of breed courses independent of the providers that they use. Content can be accessed via peer-to-peer connectivity obviating a need for broadband access.</p>
+                    </div>
+                    <div class="col-sm-4 py-4">
+                        <h4 class="text-white">Contact Us</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="https://twitter.com/edchainio" class="text-white">Follow us on Twitter</a></li>
+                            <li><a href="https://www.meetup.com/edchain/" class="text-white">Join us on Meetup</a></li>
+                            <li><a href="https://www.facebook.com/edchainio/" class="text-white">Like us on Facebook</a></li>
+                            <li><a href="http://slack.edchain.io/" class="text-white">Message us on Slack</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="navbar navbar-dark bg-dark">
+            <div class="container d-flex justify-content-between">
+                <a href="#" class="navbar-brand"><img src="header_logo.png" alt="edChain"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+        </div>
+        <section class="jumbotron text-center">
+            <div class="container">
+                <h1 class="jumbotron-heading">What is edChain?</h1>
+                <p class="lead text-muted">edChain is an open-sourced, decentralized library that allows the sharing of educational content across applications and organizations.</p>
+                <p>
+                    <a href="#" class="btn btn-primary">Main call to action</a>
+                    <a href="#" class="btn btn-secondary">Secondary action</a>
+                </p>
+            </div>
+        </section>
+        <div class="album text-muted">
+            <div class="container">
+                <div class="row">
+                    <div class="card">
+                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card">
+                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card">
+                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card">
+                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card">
+                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card">
+                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card">
+                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card">
+                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card">
+                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <footer class="text-muted">
+        <div class="container">
+            <p class="float-right">
+                <a href="#">Back to top</a>
+            </p>
+            <p>&copy; 2017 edChain</p>
+        </div>
+    </footer>
+    <script>delete module.exports</script>
+    <script src="./vendor/jquery-3.1.1.js"></script>
+    <script src="./vendor/mustache.min.js"></script>
+    <script src="./vendor/bootstrap-3.3.7.js"></script>
+    <script src="./vendor/jsoneditor.min.js"></script>
+    <script src="./window.js"></script>
+<!--     // <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    // <script>window.jQuery || document.write('<script src="jquery-slim.min.js"><\/script>')</script>
+    // <script src="vendor/js/popper.min.js"></script>
+    // <script src="vendor/js/holder.min.js"></script>
+    // <script>
+    //     $(function () {
+    //         Holder.addTheme("thumb", { background: "#55595c", foreground: "#eceeef", text: "Thumbnail" });
+    //     });
+    // </script>
+    // <script src="vendor/js/bootstrap.min.js"></script>
+    // <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    // <script src="vendor/js/ie10-viewport-bug-workaround.js"></script>
+    // <script>
+    //     var shell = require('electron').shell;
+    //     $(document).on('click', 'a[href^="http"]', function(event) {
+    //         event.preventDefault();
+    //         shell.openExternal(this.href);
+    //     });
+    // </script>
+  </body> -->
 </html>
