Add Peer ID, Publisher ID, Info: to navbarHeader

--- a/index.html
+++ b/index.html
@@ -41,6 +41,23 @@
                     <div class="col-sm-8 py-4">
                         <h4 class="text-white">About Us</h4>
                         <p class="text-muted">edChain standardizes and unites information across platforms.  Students gain access to best of breed courses independent of the providers that they use. Content can be accessed via peer-to-peer connectivity obviating a need for broadband access.</p>
+                    <div class="col-sm-2">
+                        <div id="nodeStatus" class="alert">
+                        </div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div id="IDs" class="well">
+                            <div>
+                                <b>Peer ID:</b> <span id="peerID"></span>
+                            </div>
+                            <div>
+                                <b>Publisher ID:</b> <span id="publisherID"></span>
+                            </div>
+                            <div>
+                                <b>Info:</b> <span id="info"></span>
+                            </div>
+                        </div>
+                    </div>
                     </div>
                     <div class="col-sm-4 py-4">
                         <h4 class="text-white">Contact Us</h4>
