--- a/index.html
+++ b/index.html
@@ -38,35 +38,21 @@
         <div class="collapse bg-dark" id="navbarHeader">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-8 py-4">
-                        <h4 class="text-white">About Us</h4>
-                        <p class="text-muted">edChain standardizes and unites information across platforms.  Students gain access to best of breed courses independent of the providers that they use. Content can be accessed via peer-to-peer connectivity obviating a need for broadband access.</p>
-                    <div class="col-sm-2">
-                        <div id="nodeStatus" class="alert">
-                        </div>
-                    </div>
-                    <div class="col-sm-8">
+                    <div class="col-sm-10 py-4">
+                        <h4 class="text-white">Identification</h4>
                         <div id="IDs" class="well">
-                            <div>
-                                <b>Peer ID:</b> <span id="peerID"></span>
-                            </div>
-                            <div>
-                                <b>Publisher ID:</b> <span id="publisherID"></span>
-                            </div>
-                            <div>
-                                <b>Info:</b> <span id="info"></span>
-                            </div>
+                                <p class="text-muted"><b>Peer ID:</b><span id="peerID"></span><br>
+                                <b>Publisher ID:</b><span id="publisherID"></span></p>
+<!--                             <div>
+                                <div id="nodeStatus" class="alert"></div>
+                            </div> -->
                         </div>
                     </div>
-                    </div>
-                    <div class="col-sm-4 py-4">
-                        <h4 class="text-white">Contact Us</h4>
-                        <ul class="list-unstyled">
-                            <li><a href="https://twitter.com/edchainio" class="text-white">Follow us on Twitter</a></li>
-                            <li><a href="https://www.meetup.com/edchain/" class="text-white">Join us on Meetup</a></li>
-                            <li><a href="https://www.facebook.com/edchainio/" class="text-white">Like us on Facebook</a></li>
-                            <li><a href="http://slack.edchain.io/" class="text-white">Message us on Slack</a></li>
-                        </ul>
+                    <div class="col-sm-2 py-4">
+                        <h4 class="text-white">Status</h4>
+                        <div>
+                            <div id="nodeStatus" class="alert"></div>
+                        </div>                        
                     </div>
                 </div>
             </div>
@@ -81,8 +67,8 @@
         </div>
         <section class="jumbotron text-center">
             <div class="container">
-                <h1 class="jumbotron-heading">What is edChain?</h1>
-                <p class="lead text-muted">edChain is an open-sourced, decentralized library that allows the sharing of educational content across applications and organizations.</p>
+                <h1 class="jumbotron-heading">Featured Courses</h1>
+                <p class="lead text-muted">edChain is a shared repository for educators to publish content onto.  No central servers are needed.</p>
                 <p>
                     <a href="#" class="btn btn-primary">Main call to action</a>
                     <a href="#" class="btn btn-secondary">Secondary action</a>
@@ -94,39 +80,48 @@
                 <div class="row">
                     <div class="card">
                         <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmSvXUrmXN1XvaQC5dkKfJpxJ2kPunSTXdRDVsvMfMSXTh/contents/9-52s01.jpg" alt="Image caption for Topics in Brain and Cognitive Sciences Human Ethology"> -->
+                        <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmSvXUrmXN1XvaQC5dkKfJpxJ2kPunSTXdRDVsvMfMSXTh/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Topics in Brain and Cognitive Sciences Human Ethology</a></p>
                     </div>
                     <div class="card">
                         <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/Qma6UjSxBP3adh4o5adyrEDDfvkr2hE4HGcLScmKx31cRo/contents/17-951S09.jpg" alt="Image caption for Nuclear Weapons in International Politics: Past, Present and Future"> -->
+                        <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/Qma6UjSxBP3adh4o5adyrEDDfvkr2hE4HGcLScmKx31cRo/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Nuclear Weapons in International Politics: Past, Present and Future</a></p>
                     </div>
                     <div class="card">
                         <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmPCk12erncSK2tq1KnZGXdEsxfB7VMtJ2Cv4jn6ytBTmf/contents/2-011s06.jpg" alt="Image caption for Introduction to Ocean Science and Engineering"> -->
+                        <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmPCk12erncSK2tq1KnZGXdEsxfB7VMtJ2Cv4jn6ytBTmf/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Introduction to Ocean Science and Engineering</a></p>
                     </div>
                     <div class="card">
                         <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmVmANNeZTYoRttsMjcqaKUPt6MwS3oiZeniypDC1faiU9/contents/21l-004f05.jpg" alt="Image caption for Major Poets"> -->
+                        <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmVmANNeZTYoRttsMjcqaKUPt6MwS3oiZeniypDC1faiU9/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Major Poets</a></p>
                     </div>
                     <div class="card">
                         <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/Qmd4idKDsoB3nh24hT7TsQAxwPvDkeAQdfPH4dsyzZZtU9/contents/15-075f11.jpg" alt="Image caption for Statistical Thinking and Data Analysis"> -->
+                        <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/Qmd4idKDsoB3nh24hT7TsQAxwPvDkeAQdfPH4dsyzZZtU9/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Statistical Thinking and Data Analysis</a></p>
                     </div>
                     <div class="card">
                         <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmPSv6pdVq322Rakt2NpcnEqD33wNWoXPW1UE9aWxDzbex/contents/6-635s03.jpg" alt="Image caption for Advanced Electromagnetism"> -->
+                        <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmPSv6pdVq322Rakt2NpcnEqD33wNWoXPW1UE9aWxDzbex/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Advanced Electromagnetism</a></p>
                     </div>
                     <div class="card">
                         <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmdcnyJUjbAvhS4cdsVmEWudKka5GY6GppwRWUnPE3prVC/contents/2-094s11.jpg" alt="Image caption for Finite Element Analysis of Solids and Fluids II"> -->
+                        <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmdcnyJUjbAvhS4cdsVmEWudKka5GY6GppwRWUnPE3prVC/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Finite Element Analysis of Solids and Fluids II</a></p>
                     </div>
                     <div class="card">
                         <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmSbbpLUfYNRGUygEKTPpmB7yZp2P4xGRFfLqJpiqTmq49/contents/21a-270f09.jpg" alt="Image caption for Anthropology Through Speculative Fiction"> -->
+                        <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmSbbpLUfYNRGUygEKTPpmB7yZp2P4xGRFfLqJpiqTmq49/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Anthropology Through Speculative Fiction</a></p>
                     </div>
                     <div class="card">
                         <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmXZekU9WdPHE628j57ehJKvBE6WkYRjybce7q4xVFB9ZE/contents/18-786s06.jpg" alt="Image caption for Topics in Algebraic Number Theory"> -->
+                        <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmXZekU9WdPHE628j57ehJKvBE6WkYRjybce7q4xVFB9ZE/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Topics in Algebraic Number Theory</a></p>
                     </div>
                 </div>
             </div>
