Change data-src to src in img tags

--- a/index.html
+++ b/index.html
@@ -79,48 +79,39 @@
             <div class="container">
                 <div class="row">
                     <div class="card">
-                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmSvXUrmXN1XvaQC5dkKfJpxJ2kPunSTXdRDVsvMfMSXTh/contents/9-52s01.jpg" alt="Image caption for Topics in Brain and Cognitive Sciences Human Ethology"> -->
+                        <img src="http://127.0.0.1:8080/ipfs/QmSvXUrmXN1XvaQC5dkKfJpxJ2kPunSTXdRDVsvMfMSXTh/contents/9-52s01.jpg" alt="Image caption for Topics in Brain and Cognitive Sciences Human Ethology">
                         <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmSvXUrmXN1XvaQC5dkKfJpxJ2kPunSTXdRDVsvMfMSXTh/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Topics in Brain and Cognitive Sciences Human Ethology</a></p>
                     </div>
                     <div class="card">
-                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/Qma6UjSxBP3adh4o5adyrEDDfvkr2hE4HGcLScmKx31cRo/contents/17-951S09.jpg" alt="Image caption for Nuclear Weapons in International Politics: Past, Present and Future"> -->
+                        <img src="http://127.0.0.1:8080/ipfs/Qma6UjSxBP3adh4o5adyrEDDfvkr2hE4HGcLScmKx31cRo/contents/17-951S09.jpg" alt="Image caption for Nuclear Weapons in International Politics: Past, Present and Future">
                         <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/Qma6UjSxBP3adh4o5adyrEDDfvkr2hE4HGcLScmKx31cRo/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Nuclear Weapons in International Politics: Past, Present and Future</a></p>
                     </div>
                     <div class="card">
-                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmPCk12erncSK2tq1KnZGXdEsxfB7VMtJ2Cv4jn6ytBTmf/contents/2-011s06.jpg" alt="Image caption for Introduction to Ocean Science and Engineering"> -->
+                        <img src="http://127.0.0.1:8080/ipfs/QmPCk12erncSK2tq1KnZGXdEsxfB7VMtJ2Cv4jn6ytBTmf/contents/2-011s06.jpg" alt="Image caption for Introduction to Ocean Science and Engineering">
                         <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmPCk12erncSK2tq1KnZGXdEsxfB7VMtJ2Cv4jn6ytBTmf/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Introduction to Ocean Science and Engineering</a></p>
                     </div>
                     <div class="card">
-                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmVmANNeZTYoRttsMjcqaKUPt6MwS3oiZeniypDC1faiU9/contents/21l-004f05.jpg" alt="Image caption for Major Poets"> -->
+                        <img src="http://127.0.0.1:8080/ipfs/QmVmANNeZTYoRttsMjcqaKUPt6MwS3oiZeniypDC1faiU9/contents/21l-004f05.jpg" alt="Image caption for Major Poets">
                         <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmVmANNeZTYoRttsMjcqaKUPt6MwS3oiZeniypDC1faiU9/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Major Poets</a></p>
                     </div>
                     <div class="card">
-                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/Qmd4idKDsoB3nh24hT7TsQAxwPvDkeAQdfPH4dsyzZZtU9/contents/15-075f11.jpg" alt="Image caption for Statistical Thinking and Data Analysis"> -->
+                        <img src="http://127.0.0.1:8080/ipfs/Qmd4idKDsoB3nh24hT7TsQAxwPvDkeAQdfPH4dsyzZZtU9/contents/15-075f11.jpg" alt="Image caption for Statistical Thinking and Data Analysis">
                         <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/Qmd4idKDsoB3nh24hT7TsQAxwPvDkeAQdfPH4dsyzZZtU9/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Statistical Thinking and Data Analysis</a></p>
                     </div>
                     <div class="card">
-                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmPSv6pdVq322Rakt2NpcnEqD33wNWoXPW1UE9aWxDzbex/contents/6-635s03.jpg" alt="Image caption for Advanced Electromagnetism"> -->
+                        <img src="http://127.0.0.1:8080/ipfs/QmPSv6pdVq322Rakt2NpcnEqD33wNWoXPW1UE9aWxDzbex/contents/6-635s03.jpg" alt="Image caption for Advanced Electromagnetism">
                         <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmPSv6pdVq322Rakt2NpcnEqD33wNWoXPW1UE9aWxDzbex/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Advanced Electromagnetism</a></p>
                     </div>
                     <div class="card">
-                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmdcnyJUjbAvhS4cdsVmEWudKka5GY6GppwRWUnPE3prVC/contents/2-094s11.jpg" alt="Image caption for Finite Element Analysis of Solids and Fluids II"> -->
+                        <img src="http://127.0.0.1:8080/ipfs/QmdcnyJUjbAvhS4cdsVmEWudKka5GY6GppwRWUnPE3prVC/contents/2-094s11.jpg" alt="Image caption for Finite Element Analysis of Solids and Fluids II">
                         <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmdcnyJUjbAvhS4cdsVmEWudKka5GY6GppwRWUnPE3prVC/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Finite Element Analysis of Solids and Fluids II</a></p>
                     </div>
                     <div class="card">
-                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmSbbpLUfYNRGUygEKTPpmB7yZp2P4xGRFfLqJpiqTmq49/contents/21a-270f09.jpg" alt="Image caption for Anthropology Through Speculative Fiction"> -->
+                        <img src="http://127.0.0.1:8080/ipfs/QmSbbpLUfYNRGUygEKTPpmB7yZp2P4xGRFfLqJpiqTmq49/contents/21a-270f09.jpg" alt="Image caption for Anthropology Through Speculative Fiction">
                         <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmSbbpLUfYNRGUygEKTPpmB7yZp2P4xGRFfLqJpiqTmq49/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Anthropology Through Speculative Fiction</a></p>
                     </div>
                     <div class="card">
-                        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                        <!-- <img data-src="http://127.0.0.1:8080/ipfs/QmXZekU9WdPHE628j57ehJKvBE6WkYRjybce7q4xVFB9ZE/contents/18-786s06.jpg" alt="Image caption for Topics in Algebraic Number Theory"> -->
+                        <img src="http://127.0.0.1:8080/ipfs/QmXZekU9WdPHE628j57ehJKvBE6WkYRjybce7q4xVFB9ZE/contents/18-786s06.jpg" alt="Image caption for Topics in Algebraic Number Theory">
                         <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmXZekU9WdPHE628j57ehJKvBE6WkYRjybce7q4xVFB9ZE/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Topics in Algebraic Number Theory</a></p>
                     </div>
                 </div>
