--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     event.preventDefault();
                     shell.openExternal(this.href);
                 });
+              
         </script>
     </head>
     <body>
@@ -49,9 +50,13 @@
                         </div>
                     </div>
                     <div class="col-sm-2 py-4">
-                        <h4 class="text-white">Status</h4>
+                        <h4class="text-white">Status</h4>
                         <div>
                             <div id="nodeStatus" class="alert"></div>
+                            <div id="start" class="text-white">start</div>
+                             <div id="stop" class="text-white">stop</div>
+                             <div id="version" class="text-white">version</div>
+                            
                         </div>                        
                     </div>
                 </div>
