--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
         </section>
         <div class="album text-muted">
             <div class="container">
-                <div class="row">
+                <div class="row" id="rows">
+                    
+
                     <div class="card">
                         <img src="http://127.0.0.1:8080/ipfs/QmSvXUrmXN1XvaQC5dkKfJpxJ2kPunSTXdRDVsvMfMSXTh/contents/9-52s01.jpg" alt="Image caption for Topics in Brain and Cognitive Sciences Human Ethology">
                         <p class="card-text"><a href="" onclick="window.open('http://127.0.0.1:8080/ipfs/QmSvXUrmXN1XvaQC5dkKfJpxJ2kPunSTXdRDVsvMfMSXTh/contents/index.htm', 'newwindow', 'width=1024,height=576'); return false;">Topics in Brain and Cognitive Sciences Human Ethology</a></p>
