--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
                         <h4 class="text-white">Status</h4>
                         <div>
                             <div id="nodeStatus" class="alert"></div>
-                            <div id="start" class="text-white">start</div>
-                             <div id="stop" class="text-white">stop</div>
-                             <div id="version" class="text-white">version</div>
+                            <button type="button" id="start" class="btn">start</button>
+                            <br><br>
+                            <button type="button" id="stop" class="btn">stop</button>
+                            <div id="version" class="text-white">version</div>
                             
                         </div>                        
                     </div>
