--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                         <h4 class="text-white">Status</h4>
                         <div>
                             <div id="nodeStatus" class="alert"></div>
-                            <button type="button" id="start" class="btn">start</button>
+                            <button type="button" id="start" class="btn-default">start</button>
                             <br><br>
-                            <button type="button" id="stop" class="btn">stop</button>
+                            <button type="button" id="stop" class="btn-default">stop</button>
                             <div id="version" class="text-white">version</div>
                             
                         </div>                        
@@ -83,6 +83,7 @@
         </section>
         <div class="album text-muted">
             <div class="container">
+                <div class="loader"></div>
                 <div class="row" id="rows">
                     <div class="card">
                         <img src="http://127.0.0.1:8080/ipfs/QmXZekU9WdPHE628j57ehJKvBE6WkYRjybce7q4xVFB9ZE/contents/18-786s06.jpg" alt="Image caption for Topics in Algebraic Number Theory">
