open-course-internal

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -28,11 +28,7 @@
             });
         </script>
         <script>
-           // var shell = require('electron').shell;
-                /*$(document).on('click', 'a[href^="http"]', function(event) {
-                    event.preventDefault();
-                    shell.openExternal(this.href);
-                });*/
+           
                 $(document).on('click','#settings',function(event){
                     event.preventDefault();
                     $('#settings-pane').show();
@@ -94,7 +90,7 @@
                                         Peer Id
                                     </td>
                                     <td>
-                                        <div id="peerId">QmTEpwFY9PnX9ktjgGtBDZrUT8g4gB4szWyy7HEh1oNtca</div> 
+                                        <div id="peerId"></div> 
                                     </td>
                                 </tr>
                                 <tr>    
