Left-aligned ipfs logs

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -58,7 +58,7 @@
                 <div class="container" style="height:500px;overflow:scroll">                                           
                     <div id="console">
                         <ul id="output-log">
-                            
+                            <script>document.getElementById("console").style.textAlign = "left";</script> 
                         </ul>
                     </div>
                 </div> 
