Reorganized some operations - simplified ipfs logging - cleaned up settings.js

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <h4 class="text-white"></h4>
                         <div>
                             <div id="nodeStatus" class="alert">
-                                <a href="#" id="ipfs-icon-ref" onclick="showSettings(event);" class="btn btn-outline-danger ipfs-icon">
+                                <a href="#" id="ipfs-icon-ref" class="btn btn-outline-danger ipfs-icon">
                                     <img id="img-ipfs-icon" alt="offline" width="30px" src="./static/img/ipfs-logo-128-white-outline.png"> 
                                  </a>
 
