namespacing some of the code

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="album text-muted">
             <div class="container">
                 <div class="loader"></div>
-                <div class="row" id="rows">
+                <div class="row" id="course-cards">
                     <!-- <div class="card">
                         <img src="http://127.0.0.1:8080/ipfs/QmXZekU9WdPHE628j57ehJKvBE6WkYRjybce7q4xVFB9ZE/contents/18-786s06.jpg" alt="Image caption for Topics in Algebraic Number Theory">
                         <p class="card-text"><a href="">Topics in Algebraic Number Theory</a></p>
