adding icon for mac

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -14,14 +14,11 @@
         <link href="../../vendor/css/album.css" rel="stylesheet">
         <link href="../../src/css/toggle-switch.css" rel="stylesheet">
         <script>delete module.exports</script>
-        <script>window.$ = window.jQuery = require('../../vendor/js/jquery-3.1.1.js');</script>
-        
+        <script src="../../vendor/js/jquery-3.1.1.js"></script>
         <script src="../../vendor/js/mustache.min.js"></script>
         <script src="../../vendor/js/jsoneditor.min.js"></script>
-       <!--  <script src="../../window.js"></script> -->
         <script src="../../vendor/js/popper.min.js"></script>
         <script src="../../vendor/js/bootstrap.js"></script>
-<!--         <script src="../js/settings.js"></script> -->
         <script src="../../vendor/js/holder.min.js"></script>
         <script>
             $(function () {
