--- a/index.html
+++ b/index.html
@@ -116,5 +116,17 @@
             <p>&copy; 2017 edChain</p>
         </div>
     </footer>
+
+    <script type="text/template" id="course-card-template">
+        <div class="card">
+            <img src="{{image}}">
+            <p class="card-text">
+                <a class="course-link" data-url="{{indexURL}}" href="#">
+                    {{title}}
+                </a>
+           </p>
+        </div>
+    </script>
+
   </body>
 </html>
