moved all code into src folder. in src public is for ui html/css/js. All other code can be strewn about the src folder. external code such as bootstrap goes in vendors.

--- a/src/public/html/settings.html
+++ b/src/public/html/settings.html
@@ -6,20 +6,20 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <link rel="icon" href="../../../../favicon.ico">
+        <link rel="icon" href="../../../favicon.ico">
 
         <title>edChain Settings</title>
 
-        <link href="../../vendor/css/bootstrap.css" rel="stylesheet">
-        <link href="../../vendor/css/album.css" rel="stylesheet">
-        <link href="../../src/css/toggle-switch.css" rel="stylesheet">
+        <link href="../../../vendor/css/bootstrap.css" rel="stylesheet">
+        <link href="../../../vendor/css/album.css" rel="stylesheet">
+        <link href="../../../src/css/toggle-switch.css" rel="stylesheet">
         <script>delete module.exports</script>
-        <script src="../../vendor/js/jquery-3.1.1.js"></script>
-        <script src="../../vendor/js/mustache.min.js"></script>
-        <script src="../../vendor/js/jsoneditor.min.js"></script>
-        <script src="../../vendor/js/popper.min.js"></script>
-        <script src="../../vendor/js/bootstrap.js"></script>
-        <script src="../../vendor/js/holder.min.js"></script>
+        <script src="../../../vendor/js/jquery-3.1.1.js"></script>
+        <script src="../../../vendor/js/mustache.min.js"></script>
+        <script src="../../../vendor/js/jsoneditor.min.js"></script>
+        <script src="../../../vendor/js/popper.min.js"></script>
+        <script src="../../../vendor/js/bootstrap.js"></script>
+        <script src="../../../vendor/js/holder.min.js"></script>
         <script>
             $(function () {
                 Holder.addTheme("thumb", { background: "#55595c", foreground: "#eceeef", text: "Thumbnail" });
