--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <link rel="icon" href="../../../favicon.ico">
+        <link rel="icon" href="../img/favicon.ico">
 
         <title>edChain</title>
 
@@ -39,7 +39,7 @@
                     <div class="col-sm-10 py-4">
                         <h4 class="text-white"></h4>
                         <div id="IDs" class="well">
-                            <img src="../../../static/img/header_logo.png">
+                            <img src="../img/header_logo.png">
                         </div>
                     </div>
                     <div class="col-sm-2 py-4">
@@ -47,7 +47,7 @@
                         <div>
                             <div id="nodeStatus" class="alert">
                                 <a href="#" id="ipfs-icon-ref" class="btn btn-outline-danger ipfs-icon">
-                                    <img id="img-ipfs-icon" alt="offline" width="30px" src="../../../static/img/ipfs-logo-128-white-outline.png"> 
+                                    <img id="img-ipfs-icon" alt="offline" width="30px" src="../img/ipfs-logo-128-white-outline.png"> 
                                  </a>
 
                             </div>
