--- a/src/public/html/settings.html
+++ b/src/public/html/settings.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <link rel="icon" href="../../../favicon.ico">
+        <link rel="icon" href="../img/favicon.ico">
 
         <title>edChain Settings</title>
 
