changes by devarsh ;)

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <a href="#" id="ipfs-icon-ref" onclick="showSettings(event);" class="btn btn-outline-danger ipfs-icon">
                                     <img id="img-ipfs-icon" alt="offline" width="30px" src="./static/img/ipfs-logo-128-white-outline.png"> 
                                  </a>
-
+                                <div id="peerSize"></div> Peers Connected
                             </div>
                             <div id="console"></div>
                            <!--  <button type="button" id="ipfsStatus" class="btn btn-outline-danger">Starting Up</button>
@@ -74,7 +74,6 @@
                 </div>
             </div>
         </div>
-
 
         <!-- <div class="navbar navbar-dark bg-dark">
             <div class="container d-flex justify-content-between">
@@ -90,8 +89,8 @@
                 <h1 class="jumbotron-heading">Featured Courses</h1>
                 <p class="lead text-muted">edChain is a shared repository for educators to publish content onto.  No central servers are needed.</p>
                 <p>
-                    <a href="#" class="btn btn-primary">Main call to action</a>
-                    <a href="#" class="btn btn-secondary">Secondary action</a>
+                    <a id="addPin" href="#" class="btn btn-primary">Main call to action</a>
+                 
                 </p>
             </div>
         </section>
