--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -69,7 +69,7 @@
                     edChain is a shared repository for educators to publish content onto.  No central servers are needed.
                 </p>
                 <p>
-                    <a href="#" class="btn btn-primary">
+                    <a href="#" id="testButton" class="btn btn-primary">
                         Main call to action
                     </a>
                     <a href="#" class="btn btn-secondary">
