corrected path to toggle-switch.css in settings.html

--- a/src/public/html/settings.html
+++ b/src/public/html/settings.html
@@ -12,7 +12,7 @@
 
         <link href="../../../vendor/css/bootstrap.css" rel="stylesheet">
         <link href="../../../vendor/css/album.css" rel="stylesheet">
-        <link href="../../../src/css/toggle-switch.css" rel="stylesheet">
+        <link href="../../../src/public/css/toggle-switch.css" rel="stylesheet">
         <script>delete module.exports</script>
         <script src="../../../vendor/js/jquery-3.1.1.js"></script>
         <script src="../../../vendor/js/mustache.min.js"></script>
