--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -105,6 +105,10 @@
                 <a class="course-link" data-url="{{indexURL}}" href="#">
                     {{title}}
                 </a>
+
+                <a class="pin-course-link" data-hash="{{courseHash}}" href="#">
+                    Pin Course
+                </a>
            </p>
         </div>
     </script>
