check-pin-changes

--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -107,7 +107,7 @@
                 </a>
 
                 <a class="pin-course-link" data-hash="{{courseHash}}" href="#">
-                    Pin Course
+                    {{isPinned}}
                 </a>
            </p>
         </div>
