remove-pin-changes

--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -106,7 +106,7 @@
                     {{title}}
                 </a>
 
-                <a class="pin-course-link" data-hash="{{courseHash}}" href="#">
+                <a class="pin-course-link" data-hash="{{courseHash}}" data-pin="{{isPinned}}" href="#">
                     {{isPinned}}
                 </a>
            </p>
