--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -99,7 +99,7 @@
     </footer>
 
     <script type="text/template" id="course-card-template">
-        <div class="card">
+        <div class="card" id="{{courseHash}}">
             <img src="{{image}}">
             <p class="card-text">
                 <a class="course-link" data-url="{{indexURL}}" href="#">
