--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -117,8 +117,8 @@
                             {{/status}}
                         </span>
 
-                        <a class="btn btn-primary pin-course-link" data-hash="{{courseHash}}" data-action="{{action}}" href="#">
-                            {{action}}
+                        <a class="pin-course-link" id="pin-course-link-id" data-hash="{{courseHash}}" data-action="{{action}}" href="#">
+                            
                         </a>
                     </p>
                 </div>
