adding a few edits

--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -117,9 +117,7 @@
                             {{/status}}
                         </span>
 
-                        <a class="pin-course-link" id="pin-course-link-id" data-hash="{{courseHash}}" data-action="{{action}}" href="#">
-                            
-                        </a>
+                        <a class="pin-course-link" data-hash="{{courseHash}}" data-action="{{action}}" href="#"></a>
                     </p>
                 </div>
             </div>
