add and remove pin now work with redux.

--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -110,7 +110,7 @@
                             {{/status}}
                         </span>
 
-                        <a class="pin-course-link" data-hash="{{courseDirectoryHash}}" data-action="{{action}}" href="#"></a>
+                        <a class="pin-course-link" data-id="{{courseHash}}" data-hash="{{courseDirectoryHash}}" data-action="{{action}}" href="#"></a>
                     </p>
                 </div>
             </div>
