--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -65,6 +65,7 @@
                 <h1 class="jumbotron-heading">
                     Featured Courses
                 </h1>
+                <input type="text" id="search-input"><input type="button" id="search-btn">
                 <p class="lead text-muted">
                     edChain is a shared repository for educators to publish content onto.  No central servers are needed.
                 </p>
