--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -92,6 +92,7 @@
             </div>
         </section>
         <div class="album text-muted">
+            <div id="search-count"></div>
             <div class="container">
                 <div class="loader"></div>
                 <div class="card-columns" id="course-cards">
