wallet online now

--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -122,7 +122,7 @@
                 <div class="row">
                     <div class="col-sm-3"></div>
                     <div class="col-sm-6">
-                        <center><h2 id="loading-display-msg">Fetching data from the nodes</h2></center>
+                        <center><h2 id="loading-display-msg">Fetching data from </h2></center>
                         <center><div class="loader"></div></center>
                     </div>
                     <div class="col-sm-3"></div>
