--- a/src/public/html/settings.html
+++ b/src/public/html/settings.html
@@ -33,8 +33,8 @@
     <body>
         <div class="container">
             <nav class="nav nav-tabs" role="tablist">
-                <a class="nav-item nav-link" data-toggle="tab" id="logs-tab" href="#logs-pane" role="tab">logs</a>
-                <a class="nav-item nav-link active" data-toggle="tab" id="settings-tab" href="#settings-pane">settings</a>
+                <a class="nav-item nav-link" data-toggle="tab" id="logs-tab" href="#logs-pane" role="tab">Logs</a>
+                <a class="nav-item nav-link active" data-toggle="tab" id="settings-tab" href="#settings-pane">Settings</a>
             </nav>
             <div class="tab-content text-center">
                    
