Whole tile is clickable

--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -62,7 +62,7 @@
                                  </a>
                                   <p id="stellar-logo-text">Wallet</p>
                             </div>
-                            
+
                             <div id="nodeStatus" class="col-sm-2 alert">
                                 <center>
                                 <a href="#" id="ipfs-icon-ref" class="btn btn-outline-danger ipfs-icon">
@@ -161,14 +161,15 @@
                 <a class="card-link course-link" data-url="{{indexURL}}" href="#">
                     <!--img class="card-img-top handle-img" src="{{image}}"-->
                     <center><img class="handle-img" src="{{image}}"></center>
-                </a>
+                
                 <div class="card-body">
                     <!--a class="card-link course-link" data-url="{{indexURL}}" href="#"-->
                     <center>
-                            <a id="course-title-label" href="#">{{title}}</a>
+                            <p id="course-title-label">{{title}}</p>
                     </center>
                     <!--/a-->
                 </div>
+                </a>
                 <div class="card-footer text-muted">
                     <p class="card-text">
                         <span class="pin-status">
