Minor UI changes

--- a/src/public/html/settings-newlook.html
+++ b/src/public/html/settings-newlook.html
@@ -154,14 +154,14 @@
         </div>
             
         
-            <footer class="text-muted">
+            <!--footer class="text-muted">
                 <div class="container">
                     <p class="float-right">
                         <a href="#">Back to top</a>
                     </p>
                     <p>&copy; 2017 edChain</p>
                 </div>
-            </footer>
+            </footer-->
         </div>
         <script src="../js/settings.js"></script>
     </body>
