tiny css changes

--- a/src/public/html/index.html
+++ b/src/public/html/index.html
@@ -165,7 +165,7 @@
                 <div class="card-body">
                     <!--a class="card-link course-link" data-url="{{indexURL}}" href="#"-->
                     <center>
-                            <p id="course-title-label">{{title}}</p>
+                            <h5 id="course-title-label">{{title}}</h5>
                     </center>
                     <!--/a-->
                 </div>
